lib/parser/parse.output
Terminals unused in grammar

   ELIPSES
   NOT


State 16 conflicts: 2 shift/reduce
State 31 conflicts: 1 shift/reduce
State 37 conflicts: 1 shift/reduce
State 40 conflicts: 4 shift/reduce
State 53 conflicts: 1 shift/reduce
State 54 conflicts: 1 shift/reduce
State 59 conflicts: 2 shift/reduce
State 61 conflicts: 1 shift/reduce
State 62 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: expressions

    2 expressions: %empty
    3            | expressions expression

    4 expression_end: LINE_END
    5               | SEMICOLON

    6 unterminated_expression: literal
    7                        | lookup
    8                        | block
    9                        | list
   10                        | method_call
   11                        | implicit_method_call
   12                        | local_assignment
   13                        | attr_assignment
   14                        | export_expression

   15 expression: unterminated_expression expression_end
   16           | expression_end

   17 literal: string
   18        | number
   19        | ATOM
   20        | REGEX
   21        | TRUE
   22        | FALSE
   23        | NIL

   24 string: STRING
   25       | EVAL_STRING

   26 number: INTEGER
   27       | FLOAT

   28 lookup: ID
   29       | CLASS_ID

   30 list: OPEN_PAREN list_elements CLOSE_PAREN

   31 list_elements: %empty
   32              | unterminated_expression
   33              | DEFERRED_ARGUMENT
   34              | unterminated_expression COMMA list_elements

   35 block: BLOCK_DECLARATION OPEN_BRACE expressions CLOSE_BRACE
   36      | BLOCK_DECLARATION list OPEN_BRACE expressions CLOSE_BRACE

   37 implicit_method_call: ID unterminated_expression

   38 binary_operator_call: unterminated_expression implicit_method_call
   39                     | unterminated_expression AND unterminated_expression
   40                     | unterminated_expression OR unterminated_expression

   41 standard_method_call: unterminated_expression DOT implicit_method_call
   42                     | unterminated_expression DOT ID

   43 method_call: binary_operator_call
   44            | standard_method_call
   45            | block_method_call

   46 block_method_call: standard_method_call block

   47 local_assignment: ID EQUAL_SIGN unterminated_expression

   48 attr_assignment: ID COLON unterminated_expression

   49 export_expression: EXPORT unterminated_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
TRUE (258) 21
FALSE (259) 22
NIL (260) 23
EQUAL_SIGN (261) 47
COLON (262) 48
EXPORT (263) 49
SEMICOLON (264) 5
LINE_END (265) 4
COMMA (266) 34
STRING (267) 24
EVAL_STRING (268) 25
INTEGER (269) 26
FLOAT (270) 27
ATOM (271) 19
REGEX (272) 20
ID (273) 28 37 42 47 48
CLASS_ID (274) 29
DEFERRED_ARGUMENT (275) 33
ELIPSES (276)
DOT (277) 41 42
BLOCK_DECLARATION (278) 35 36
OPEN_BRACE (279) 35 36
CLOSE_BRACE (280) 35 36
OPEN_PAREN (281) 30
CLOSE_PAREN (282) 30
AND (283) 39
OR (284) 40
NOT (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
expressions (33)
    on left: 2 3, on right: 1 3 35 36
expression_end (34)
    on left: 4 5, on right: 15 16
unterminated_expression (35)
    on left: 6 7 8 9 10 11 12 13 14, on right: 15 32 34 37 38 39 40
    41 42 47 48 49
expression (36)
    on left: 15 16, on right: 3
literal (37)
    on left: 17 18 19 20 21 22 23, on right: 6
string (38)
    on left: 24 25, on right: 17
number (39)
    on left: 26 27, on right: 18
lookup (40)
    on left: 28 29, on right: 7
list (41)
    on left: 30, on right: 9 36
list_elements (42)
    on left: 31 32 33 34, on right: 30 34
block (43)
    on left: 35 36, on right: 8 46
implicit_method_call (44)
    on left: 37, on right: 11 38 41
binary_operator_call (45)
    on left: 38 39 40, on right: 43
standard_method_call (46)
    on left: 41 42, on right: 44 46
method_call (47)
    on left: 43 44 45, on right: 10
block_method_call (48)
    on left: 46, on right: 45
local_assignment (49)
    on left: 47, on right: 12
attr_assignment (50)
    on left: 48, on right: 13
export_expression (51)
    on left: 49, on right: 14


State 0

    0 $accept: . program $end

    $default  reduce using rule 2 (expressions)

    program      go to state 1
    expressions  go to state 2


State 1

    0 $accept: program . $end

    $end  shift, and go to state 3


State 2

    1 program: expressions .
    3 expressions: expressions . expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    SEMICOLON          shift, and go to state 8
    LINE_END           shift, and go to state 9
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    $default  reduce using rule 1 (program)

    expression_end           go to state 20
    unterminated_expression  go to state 21
    expression               go to state 22
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 3

    0 $accept: program $end .

    $default  accept


State 4

   21 literal: TRUE .

    $default  reduce using rule 21 (literal)


State 5

   22 literal: FALSE .

    $default  reduce using rule 22 (literal)


State 6

   23 literal: NIL .

    $default  reduce using rule 23 (literal)


State 7

   49 export_expression: EXPORT . unterminated_expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    unterminated_expression  go to state 37
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 8

    5 expression_end: SEMICOLON .

    $default  reduce using rule 5 (expression_end)


State 9

    4 expression_end: LINE_END .

    $default  reduce using rule 4 (expression_end)


State 10

   24 string: STRING .

    $default  reduce using rule 24 (string)


State 11

   25 string: EVAL_STRING .

    $default  reduce using rule 25 (string)


State 12

   26 number: INTEGER .

    $default  reduce using rule 26 (number)


State 13

   27 number: FLOAT .

    $default  reduce using rule 27 (number)


State 14

   19 literal: ATOM .

    $default  reduce using rule 19 (literal)


State 15

   20 literal: REGEX .

    $default  reduce using rule 20 (literal)


State 16

   28 lookup: ID .
   37 implicit_method_call: ID . unterminated_expression
   47 local_assignment: ID . EQUAL_SIGN unterminated_expression
   48 attr_assignment: ID . COLON unterminated_expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EQUAL_SIGN         shift, and go to state 38
    COLON              shift, and go to state 39
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    ID                 [reduce using rule 28 (lookup)]
    BLOCK_DECLARATION  [reduce using rule 28 (lookup)]
    $default           reduce using rule 28 (lookup)

    unterminated_expression  go to state 40
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 17

   29 lookup: CLASS_ID .

    $default  reduce using rule 29 (lookup)


State 18

   35 block: BLOCK_DECLARATION . OPEN_BRACE expressions CLOSE_BRACE
   36      | BLOCK_DECLARATION . list OPEN_BRACE expressions CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 41
    OPEN_PAREN  shift, and go to state 19

    list  go to state 42


State 19

   30 list: OPEN_PAREN . list_elements CLOSE_PAREN

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    DEFERRED_ARGUMENT  shift, and go to state 43
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    $default  reduce using rule 31 (list_elements)

    unterminated_expression  go to state 44
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    list_elements            go to state 45
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 20

   16 expression: expression_end .

    $default  reduce using rule 16 (expression)


State 21

   15 expression: unterminated_expression . expression_end
   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   40                     | unterminated_expression . OR unterminated_expression
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID

    SEMICOLON  shift, and go to state 8
    LINE_END   shift, and go to state 9
    ID         shift, and go to state 46
    DOT        shift, and go to state 47
    AND        shift, and go to state 48
    OR         shift, and go to state 49

    expression_end        go to state 50
    implicit_method_call  go to state 51


State 22

    3 expressions: expressions expression .

    $default  reduce using rule 3 (expressions)


State 23

    6 unterminated_expression: literal .

    $default  reduce using rule 6 (unterminated_expression)


State 24

   17 literal: string .

    $default  reduce using rule 17 (literal)


State 25

   18 literal: number .

    $default  reduce using rule 18 (literal)


State 26

    7 unterminated_expression: lookup .

    $default  reduce using rule 7 (unterminated_expression)


State 27

    9 unterminated_expression: list .

    $default  reduce using rule 9 (unterminated_expression)


State 28

    8 unterminated_expression: block .

    $default  reduce using rule 8 (unterminated_expression)


State 29

   11 unterminated_expression: implicit_method_call .

    $default  reduce using rule 11 (unterminated_expression)


State 30

   43 method_call: binary_operator_call .

    $default  reduce using rule 43 (method_call)


State 31

   44 method_call: standard_method_call .
   46 block_method_call: standard_method_call . block

    BLOCK_DECLARATION  shift, and go to state 18

    BLOCK_DECLARATION  [reduce using rule 44 (method_call)]
    $default           reduce using rule 44 (method_call)

    block  go to state 52


State 32

   10 unterminated_expression: method_call .

    $default  reduce using rule 10 (unterminated_expression)


State 33

   45 method_call: block_method_call .

    $default  reduce using rule 45 (method_call)


State 34

   12 unterminated_expression: local_assignment .

    $default  reduce using rule 12 (unterminated_expression)


State 35

   13 unterminated_expression: attr_assignment .

    $default  reduce using rule 13 (unterminated_expression)


State 36

   14 unterminated_expression: export_expression .

    $default  reduce using rule 14 (unterminated_expression)


State 37

   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   40                     | unterminated_expression . OR unterminated_expression
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID
   49 export_expression: EXPORT unterminated_expression .

    ID   shift, and go to state 46
    DOT  shift, and go to state 47
    AND  shift, and go to state 48
    OR   shift, and go to state 49

    ID        [reduce using rule 49 (export_expression)]
    $default  reduce using rule 49 (export_expression)

    implicit_method_call  go to state 51


State 38

   47 local_assignment: ID EQUAL_SIGN . unterminated_expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    unterminated_expression  go to state 53
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 39

   48 attr_assignment: ID COLON . unterminated_expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    unterminated_expression  go to state 54
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 40

   37 implicit_method_call: ID unterminated_expression .
   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   40                     | unterminated_expression . OR unterminated_expression
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID

    ID   shift, and go to state 46
    DOT  shift, and go to state 47
    AND  shift, and go to state 48
    OR   shift, and go to state 49

    ID        [reduce using rule 37 (implicit_method_call)]
    DOT       [reduce using rule 37 (implicit_method_call)]
    AND       [reduce using rule 37 (implicit_method_call)]
    OR        [reduce using rule 37 (implicit_method_call)]
    $default  reduce using rule 37 (implicit_method_call)

    implicit_method_call  go to state 51


State 41

   35 block: BLOCK_DECLARATION OPEN_BRACE . expressions CLOSE_BRACE

    $default  reduce using rule 2 (expressions)

    expressions  go to state 55


State 42

   36 block: BLOCK_DECLARATION list . OPEN_BRACE expressions CLOSE_BRACE

    OPEN_BRACE  shift, and go to state 56


State 43

   33 list_elements: DEFERRED_ARGUMENT .

    $default  reduce using rule 33 (list_elements)


State 44

   32 list_elements: unterminated_expression .
   34              | unterminated_expression . COMMA list_elements
   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   40                     | unterminated_expression . OR unterminated_expression
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID

    COMMA  shift, and go to state 57
    ID     shift, and go to state 46
    DOT    shift, and go to state 47
    AND    shift, and go to state 48
    OR     shift, and go to state 49

    $default  reduce using rule 32 (list_elements)

    implicit_method_call  go to state 51


State 45

   30 list: OPEN_PAREN list_elements . CLOSE_PAREN

    CLOSE_PAREN  shift, and go to state 58


State 46

   37 implicit_method_call: ID . unterminated_expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    unterminated_expression  go to state 40
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 47

   41 standard_method_call: unterminated_expression DOT . implicit_method_call
   42                     | unterminated_expression DOT . ID

    ID  shift, and go to state 59

    implicit_method_call  go to state 60


State 48

   39 binary_operator_call: unterminated_expression AND . unterminated_expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    unterminated_expression  go to state 61
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 49

   40 binary_operator_call: unterminated_expression OR . unterminated_expression

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    unterminated_expression  go to state 62
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 50

   15 expression: unterminated_expression expression_end .

    $default  reduce using rule 15 (expression)


State 51

   38 binary_operator_call: unterminated_expression implicit_method_call .

    $default  reduce using rule 38 (binary_operator_call)


State 52

   46 block_method_call: standard_method_call block .

    $default  reduce using rule 46 (block_method_call)


State 53

   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   40                     | unterminated_expression . OR unterminated_expression
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID
   47 local_assignment: ID EQUAL_SIGN unterminated_expression .

    ID   shift, and go to state 46
    DOT  shift, and go to state 47
    AND  shift, and go to state 48
    OR   shift, and go to state 49

    ID        [reduce using rule 47 (local_assignment)]
    $default  reduce using rule 47 (local_assignment)

    implicit_method_call  go to state 51


State 54

   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   40                     | unterminated_expression . OR unterminated_expression
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID
   48 attr_assignment: ID COLON unterminated_expression .

    ID   shift, and go to state 46
    DOT  shift, and go to state 47
    AND  shift, and go to state 48
    OR   shift, and go to state 49

    ID        [reduce using rule 48 (attr_assignment)]
    $default  reduce using rule 48 (attr_assignment)

    implicit_method_call  go to state 51


State 55

    3 expressions: expressions . expression
   35 block: BLOCK_DECLARATION OPEN_BRACE expressions . CLOSE_BRACE

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    SEMICOLON          shift, and go to state 8
    LINE_END           shift, and go to state 9
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    CLOSE_BRACE        shift, and go to state 63
    OPEN_PAREN         shift, and go to state 19

    expression_end           go to state 20
    unterminated_expression  go to state 21
    expression               go to state 22
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 56

   36 block: BLOCK_DECLARATION list OPEN_BRACE . expressions CLOSE_BRACE

    $default  reduce using rule 2 (expressions)

    expressions  go to state 64


State 57

   34 list_elements: unterminated_expression COMMA . list_elements

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    DEFERRED_ARGUMENT  shift, and go to state 43
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    $default  reduce using rule 31 (list_elements)

    unterminated_expression  go to state 44
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    list_elements            go to state 65
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 58

   30 list: OPEN_PAREN list_elements CLOSE_PAREN .

    $default  reduce using rule 30 (list)


State 59

   37 implicit_method_call: ID . unterminated_expression
   42 standard_method_call: unterminated_expression DOT ID .

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    OPEN_PAREN         shift, and go to state 19

    ID                 [reduce using rule 42 (standard_method_call)]
    BLOCK_DECLARATION  [reduce using rule 42 (standard_method_call)]
    $default           reduce using rule 42 (standard_method_call)

    unterminated_expression  go to state 40
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 60

   41 standard_method_call: unterminated_expression DOT implicit_method_call .

    $default  reduce using rule 41 (standard_method_call)


State 61

   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   39                     | unterminated_expression AND unterminated_expression .
   40                     | unterminated_expression . OR unterminated_expression
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID

    ID  shift, and go to state 46

    ID        [reduce using rule 39 (binary_operator_call)]
    $default  reduce using rule 39 (binary_operator_call)

    implicit_method_call  go to state 51


State 62

   38 binary_operator_call: unterminated_expression . implicit_method_call
   39                     | unterminated_expression . AND unterminated_expression
   40                     | unterminated_expression . OR unterminated_expression
   40                     | unterminated_expression OR unterminated_expression .
   41 standard_method_call: unterminated_expression . DOT implicit_method_call
   42                     | unterminated_expression . DOT ID

    ID  shift, and go to state 46

    ID        [reduce using rule 40 (binary_operator_call)]
    $default  reduce using rule 40 (binary_operator_call)

    implicit_method_call  go to state 51


State 63

   35 block: BLOCK_DECLARATION OPEN_BRACE expressions CLOSE_BRACE .

    $default  reduce using rule 35 (block)


State 64

    3 expressions: expressions . expression
   36 block: BLOCK_DECLARATION list OPEN_BRACE expressions . CLOSE_BRACE

    TRUE               shift, and go to state 4
    FALSE              shift, and go to state 5
    NIL                shift, and go to state 6
    EXPORT             shift, and go to state 7
    SEMICOLON          shift, and go to state 8
    LINE_END           shift, and go to state 9
    STRING             shift, and go to state 10
    EVAL_STRING        shift, and go to state 11
    INTEGER            shift, and go to state 12
    FLOAT              shift, and go to state 13
    ATOM               shift, and go to state 14
    REGEX              shift, and go to state 15
    ID                 shift, and go to state 16
    CLASS_ID           shift, and go to state 17
    BLOCK_DECLARATION  shift, and go to state 18
    CLOSE_BRACE        shift, and go to state 66
    OPEN_PAREN         shift, and go to state 19

    expression_end           go to state 20
    unterminated_expression  go to state 21
    expression               go to state 22
    literal                  go to state 23
    string                   go to state 24
    number                   go to state 25
    lookup                   go to state 26
    list                     go to state 27
    block                    go to state 28
    implicit_method_call     go to state 29
    binary_operator_call     go to state 30
    standard_method_call     go to state 31
    method_call              go to state 32
    block_method_call        go to state 33
    local_assignment         go to state 34
    attr_assignment          go to state 35
    export_expression        go to state 36


State 65

   34 list_elements: unterminated_expression COMMA list_elements .

    $default  reduce using rule 34 (list_elements)


State 66

   36 block: BLOCK_DECLARATION list OPEN_BRACE expressions CLOSE_BRACE .

    $default  reduce using rule 36 (block)
